Fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
   --font-size-footer: 1rem;
 
   /*Font family */
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 /* Body Styling  */
@@ -39,13 +39,13 @@ body {
 
 .table-container {
   padding: 20px;
-  }
+}
 
-  .table { 
-  width: 31.25rem; 
-  margin-left: auto ;
-  margin-right: auto ;
-  }
+.table {
+  width: 31.25rem;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 table,
 th,
@@ -68,31 +68,30 @@ th {
   font-weight: normal;
 }
 
-.table__subtitle, 
-.table__entries { 
+.table__subtitle,
+.table__entries {
   padding: 20px;
 }
 
-.table__subtitle { 
+.table__subtitle {
   font-size: var(--font-size-table__subtitle);
   text-transform: uppercase;
   font-weight: normal;
 }
 
-.table__entries { 
-font-size: var(--font-size-table__entries);
+.table__entries {
+  font-size: var(--font-size-table__entries);
 }
 
 .header__title,
-.table__subtitle, 
-.table__entries--center  {
+.table__subtitle,
+.table__entries--center {
   text-align: center;
 }
 
 .table__entries--justify {
-  text-align: justify;
+  text-align: center;
 }
-
 
 /* Footer alignment  */
 
@@ -109,7 +108,7 @@ font-size: var(--font-size-table__entries);
   position: absolute;
   bottom: 50;
   width: 100%;
-  height: 2rem;            /* Footer height */
+  height: 2rem; /* Footer height */
   text-align: center;
   font-size: var(--font-size-footer);
   text-transform: uppercase;
@@ -121,26 +120,24 @@ font-size: var(--font-size-table__entries);
   padding: 0.9375rem;
 }
 
-@media screen and (max-width:500px) {
-
-  .table { 
-    width: 18rem; 
-    margin-left: auto ;
-    margin-right: auto ;
-    }
-  
-    .table__entries--justify {
-      text-align: center;
-    }
-
-    .footer-list__li {
-      padding: 0.4rem;
-    }
-}
-
-@media screen and (max-width:250px) {
-  .header-container{
-width: 100vmax;
+@media screen and (max-width: 500px) {
+  .table {
+    width: 18rem;
+    margin-left: auto;
+    margin-right: auto;
   }
 
+  .table__entries--justify {
+    text-align: center;
+  }
+
+  .footer-list__li {
+    padding: 0.4rem;
+  }
+}
+
+@media screen and (max-width: 250px) {
+  .header-container {
+    width: 100vmax;
+  }
 }
